framec_tests/language_specific/typescript/v3_mir/positive/not_at_sol_transition.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                if (x) { a(); -> $B(); b(); }
            }
        }
}
