framec_tests/language_specific/typescript/v3_mir/negative/native_after_terminal.frm
@target typescript

system S {
    machine:
        $A {
            e() {
                -> $B()
                let x = 1; // native after terminal
            }
        }
}

